Added warning before Shutdown from main menu.

--- a/changelog.txt
+++ b/changelog.txt
@@ -9,6 +9,7 @@
 - fixed lyrics button navigation
 - Removed CU lyrics xml's
 - Added new viewtype for episodes
+- Added option to enable/disable timepanel in all views.
 
 [B]0.2.3[/B]
 - fixed landscape view info panel
