--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -89,7 +89,9 @@
   <string id="31145">Hide Studio and Rating Flags</string>
   <string id="31146">Show 10 tracks in playlist instead of 5</string>
   <string id="31147">Show playlist</string>
-  <string id="31148">Show Timepanel in all views</string>
+  <string id="31148">Show Timepanel</string>
+  <string id="31149">This will shuwtdown XBMC! [CR]Are you sure?</string>
+
   <!-- Script labels -->
   <string id="31200">Shortcuts</string>
   <string id="31201">Categories</string>
