Minor fixes + Started work on implementing Low List view

--- a/changelog.txt
+++ b/changelog.txt
@@ -10,6 +10,7 @@
 - Removed CU lyrics xml's
 - Added new viewtype for episodes
 - Added option to enable/disable timepanel in all views.
+- Added warning before shutdown from main menu.
 
 [B]0.2.3[/B]
 - fixed landscape view info panel
