--- a/changelog.txt
+++ b/changelog.txt
@@ -11,6 +11,9 @@
 - Added new viewtype for episodes
 - Added option to enable/disable timepanel in all views.
 - Added warning before shutdown from main menu.
+- Added Low List View (only movies and episodes for now)
+- fixed position of focused label in DialogSelect.xml
+- fixed Get thumb and get fanart buttons in Album and Song Info
 
 [B]0.2.3[/B]
 - fixed landscape view info panel
