--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -90,7 +90,7 @@
   <string id="31146">Show 10 tracks in playlist instead of 5</string>
   <string id="31147">Show playlist</string>
   <string id="31148">Show Timepanel</string>
-  <string id="31149">This will shuwtdown XBMC! [CR]Are you sure?</string>
+  <string id="31149">This will shutdown XBMC! [CR]Are you sure?</string>
 
   <!-- Script labels -->
   <string id="31200">Shortcuts</string>
