every label of aeon nox is in subsection in strings.xml

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -20,8 +20,6 @@
   <string id="31027">Location</string>
  
   <!-- View Type labels -->
-  <string id="31028">Showcase</string>
-  <string id="31029">Showcase</string>
   <string id="31030">Full list</string>
   <string id="31031">Pic Thumbs</string>
   <string id="31032">Image Wrap</string>
@@ -53,10 +51,7 @@
   <string id="31101">Home screen options</string>
   <string id="31102">Background</string>
   <string id="31103">Show "Paused" in picture slide show</string>
-  <string id="31104">Show CDart in Music Visualization</string>
-  <string id="31105">Lock main menu</string>
   <string id="31106">Miscellaneous options</string>
-  <string id="31107">Hide Flagging in List View</string>
   <string id="31108">Hide Main Menu Buttons</string>
   <string id="31109">Media backgrounds</string>
   <string id="31110">Edit Background for Media Type</string>
@@ -73,24 +68,11 @@
   <string id="31121">PATH TO ADD-ON</string>
   <string id="31122">Weather Page</string>
   <string id="31123">Use "Posters" instead of "Banners" for TV Shows</string>
-  <string id="31124">Bigger top bar on music OSD</string>
-  <string id="31125">Show Background "Now Playing" Visualization</string>
-  <string id="31142">Show Album level fanart in Visualization</string>
   <string id="31126">Enable Lyrics in Music OSD</string>
   <string id="31127">PATH TO LYRICS ADD-ON</string>
   <string id="31128">Lyrics</string>
   <string id="31129">Enable Subtitle Download in Video OSD</string>
   <string id="31130">PATH TO SUBTITLE ADD-ON</string>
-  <string id="31131">Lower main menu while locked</string>
-  <string id="31140">Music OSD</string>
-  <string id="31141">Video OSD</string>
-  <string id="31143">Animated Fanart in Music Visualization</string>
-  <string id="31144">Music Fanart "Now Playing"</string>
-  <string id="31145">Hide Studio and Rating Flags</string>
-  <string id="31146">Show 10 tracks in playlist instead of 5</string>
-  <string id="31147">Show playlist</string>
-  <string id="31148">Show Timepanel</string>
-  <string id="31149">This will shutdown XBMC! [CR]Are you sure?</string>
 
   <!-- Script labels -->
   <string id="31200">Shortcuts</string>
@@ -158,13 +140,11 @@
   <string id="31404">[B]CONFIGURE WEATHER SETTINGS[/B][CR][CR]Set three cities to collect weather information</string>
   <string id="31405">[B]CONFIGURE NETWORK SETTINGS[/B][CR][CR]Setup control of XBMC via UPnP and HTTP · Configure file sharing[CR]Set internet access options</string>
   <string id="31406">[B]CONFIGURE SYSTEM SETTINGS[/B][CR][CR]Setup and calibrate displays · Configure audio output · Setup remote controls[CR]Set power saving options · Enable debugging · Setup master lock</string>
-  <string id="31407">[B]CONFIGURE SKIN SETTINGS[/B][CR][CR]Setup the Aeon Nox skin · Add and remove home menu items[CR]Change skin backgrounds</string>
   <string id="31408">[B]CONFIGURE ADD-ONS[/B][CR][CR]Manage your installed Add-ons · Browse for and install Add-ons from xbmc.org[CR]Modify Add-on settings</string>
-  <string id="31409">[B]MONITOR YOUR SYSTEM[/B][CR][CR]Check out your hardware · Monitor CPU usage[CR]Check XBMC revision number</string>
 
   <string id="31421">Select your XBMC user Profile[CR]to login and continue</string>
   
-  <!--Aeon Revisited-->
+  <!--Aeon Nox-->
   <string id="312573">Press UP to see trailer</string>
   <string id="312574">Press 'X' to stop</string>
   <string id="312575">Press SELECT to see trailer</string>
@@ -191,5 +171,25 @@
   <string id="31703">CHANNELS</string>
   <string id="31713">ITEMS IN PLAYLIST</string>
   <string id="31714">CURRENT POSITION</string>
+  <string id="31131">Lower main menu while locked</string>
+  <string id="31140">Music OSD</string>
+  <string id="31141">Video OSD</string>
+  <string id="31143">Animated Fanart in Music Visualization</string>
+  <string id="31144">Music Fanart "Now Playing"</string>
+  <string id="31145">Hide Studio and Rating Flags</string>
+  <string id="31146">Show 10 tracks in playlist instead of 5</string>
+  <string id="31147">Show playlist</string>
+  <string id="31148">Show Timepanel</string>
+  <string id="31149">This will shutdown XBMC! [CR]Are you sure?</string>
+  <string id="31407">[B]CONFIGURE SKIN SETTINGS[/B][CR][CR]Setup the Aeon Nox skin · Add and remove home menu items[CR]Change skin backgrounds</string>
+  <string id="31409">[B]MONITOR YOUR SYSTEM[/B][CR][CR]Check out your hardware · Monitor CPU usage[CR]Check XBMC revision number</string>
+  <string id="31124">Bigger top bar on music OSD</string>
+  <string id="31125">Show Background "Now Playing" Visualization</string>
+  <string id="31142">Show Album level fanart in Visualization</string>
+  <string id="31107">Hide Flagging in List View</string>
+  <string id="31104">Show CDart in Music Visualization</string>
+  <string id="31105">Lock main menu</string>
+  <string id="31028">Showcase</string>
+  <string id="31029">Showcase</string>
 
 </strings>
