fixed bug when changing views while playing video

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -191,5 +191,8 @@
   <string id="31105">Lock main menu</string>
   <string id="31028">Showcase</string>
   <string id="31029">Showcase</string>
+  <string id="31150">Landscape</string>
+  <string id="31151">DVD Case</string>
+  <string id="31152">CD Case</string>
 
 </strings>
