--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -194,5 +194,6 @@
   <string id="31150">Landscape</string>
   <string id="31151">DVD Case</string>
   <string id="31152">CD Case</string>
+  <string id="31153">Low List</string>
 
 </strings>
