--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,14 @@
+[B]0.4[/B]
+- Added: When Infopanel is disabled in showcase views, trigger is now automatically active. 
+  Push up to trigger the panel, you can then scroll left and right with panel on and push down to disable panel.
+- Added: Info screen is now added to Low List view (only movies and episodes). Push right to trigger the info. 
+  Push up or down to scroll through the list with info on.
+- Added extrathumbs support in Low List info view.
+- Low List is now selectabe in tvshows and seasons view.
+- Changed seaon and tvshow thumb to episode thumb in Low List episode view
+- Added filename to DialogVideoInfo.xml
+- Some minor fixes
+
 [B]0.3[/B]
 - Skinned SmartPlaylistEditor.xml and SmartPlaylistRule.xml
 - changed background of network setup
