Localized all labels.

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -101,7 +101,6 @@
   <string id="31315">Basic</string>
   <string id="31316"></string>
   <string id="31317">Set Fanart Path</string>
-  <string id="31318">Small Fanart</string>
   <string id="31319">Selected Profile</string>
   <string id="31320">Last Logged In</string>
   <string id="31321">Karaoke Song Selector</string>
@@ -195,5 +194,25 @@
   <string id="31151">DVD Case</string>
   <string id="31152">CD Case</string>
   <string id="31153">Low List</string>
+  <string id="31154">LOADING</string>
+  <string id="31155">PLEASE WAIT</string>
+  <string id="31156">Directed by</string>
+  <string id="31157">Written by</string>
+  <string id="31158">Current Time</string>
+  <string id="31159">Mute</string>
+  <string id="31160">MODIFIED:</string>
+  <string id="31161">TAKEN:</string>
+  <string id="31162">Trailers</string>
+  <string id="31163">Featured</string>
+  <string id="31164">Sort</string>
+  <string id="31165">Slim List</string>
+  <string id="31166">Infopanel</string>
+  <string id="31167">Auto Hide</string>
+  <string id="31168">No CoverFlow</string>
+  <string id="31169">Thin Panel</string>
+  <string id="31170">Lower List</string>
+  <string id="31171">TV Logo's</string>
+  <string id="31318">Small</string>
+  <string id="31172">Extra Info</string>
 
 </strings>
