minor fixes + started work an music low list

--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,7 @@
 - Low List is now selectabe in tvshows and seasons view.
 - Changed seaon and tvshow thumb to episode thumb in Low List episode view
 - Added filename to DialogVideoInfo.xml
+- Localized all labels
 - Some minor fixes
 
 [B]0.3[/B]
