new version to repo

--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,7 @@
   Push up or down to scroll through the list with info on.
 - Added extrathumbs support in Low List info view.
 - Low List is now selectabe in tvshows and seasons view.
+- Low List is now selectabel in songs view.
 - Changed seaon and tvshow thumb to episode thumb in Low List episode view
 - Added filename to DialogVideoInfo.xml
 - Localized all labels
