Added logo button in DialogVideoInfo.xml

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -212,5 +212,6 @@
   <string id="31171">TV Logo's</string>
   <string id="31318">Small</string>
   <string id="31172">Extra Info</string>
+  <string id="31173">Get Logo</string>
 
 </strings>
