--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -213,5 +213,6 @@
   <string id="31318">Small</string>
   <string id="31172">Extra Info</string>
   <string id="31173">Get Logo</string>
+  <string id="31174">Enable TvTunes</string>
 
 </strings>
