Added option to add playlists to submenu's of Music and Movies

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -214,5 +214,8 @@
   <string id="31172">Extra Info</string>
   <string id="31173">Get Logo</string>
   <string id="31174">Enable TvTunes</string>
+  <string id="31175">Add Custom Playlist Button to Movies Submenu</string>
+  <string id="31176">Enable Custom Playlist Button</string>
+  <string id="31177">Add Custom Playlist Button to Music Submenu</string>
 
 </strings>
