--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -64,15 +64,15 @@
   <string id="31117">Show Recently added Videos</string>
   <string id="31118">Home Page Programs Submenu</string>
   <string id="31119">Enable Custom Add-on Button</string>
-  <string id="31120">BUTTON LABEL</string>
-  <string id="31121">PATH TO ADD-ON</string>
+  <string id="31120">Button Label</string>
+  <string id="31121">Path to Add-On</string>
   <string id="31122">Weather Page</string>
   <string id="31123">Use "Posters" instead of "Banners" for TV Shows</string>
   <string id="31126">Enable Lyrics in Music OSD</string>
-  <string id="31127">PATH TO LYRICS ADD-ON</string>
+  <string id="31127">Path to Lyrics Add-On</string>
   <string id="31128">Lyrics</string>
   <string id="31129">Enable Subtitle Download in Video OSD</string>
-  <string id="31130">PATH TO SUBTITLE ADD-ON</string>
+  <string id="31130">Path to Subtitle Add-On</string>
 
   <!-- Script labels -->
   <string id="31200">Shortcuts</string>
