--- a/changelog.txt
+++ b/changelog.txt
@@ -1,11 +1,24 @@
+[B]0.5[/B]
+- Added: TV Show logo download button in Info screen for tvshows.
+- Added: TvTunes support.
+- Added: Aeon's Flow/No Flow animation in Showcase views.
+- Added: It is now possible to add video playlists to submenu of Movies.
+- Added: It is now possible to add music playlists to submenu of Music.
+- Added: Video Playlists sub-menu item to Videos menu.
+- Added: TV Show logo to Landscape view
+- Added: Not Rated flag in VideoInfo / Party mode submenu-item to Music menu- thx Danofun.
+- Fixed: Infopanel visibility when exiting episode or seasons view.
+- Repositioned Mediamenu.
+- Minor fixes and optimizations.
+
 [B]0.4[/B]
 - Added: When Infopanel is disabled in showcase views, trigger is now automatically active. 
   Push up to trigger the panel, you can then scroll left and right with panel on and push down to disable panel.
 - Added: Info screen is now added to Low List view (only movies and episodes). Push right to trigger the info. 
   Push up or down to scroll through the list with info on.
 - Added extrathumbs support in Low List info view.
-- Low List is now selectabe in tvshows and seasons view.
-- Low List is now selectabel in songs view.
+- Low List is now selectable in tvshows and seasons view.
+- Low List is now selectable in songs view.
 - Changed seaon and tvshow thumb to episode thumb in Low List episode view
 - Added filename to DialogVideoInfo.xml
 - Localized all labels
