--- a/changelog.txt
+++ b/changelog.txt
@@ -2,8 +2,9 @@
 - Added: TV Show logo download button in Info screen for tvshows.
 - Added: TvTunes support.
 - Added: Aeon's Flow/No Flow animation in Showcase views.
-- Added: It is now possible to add video playlists to submenu of Movies.
-- Added: It is now possible to add music playlists to submenu of Music.
+- Added: It is now possible to add 3 video playlists to submenu of Movies.
+- Added: It is now possible to add 3 video playlists to submenu of TV Shows.
+- Added: It is now possible to add 3 music playlists to submenu of Music.
 - Added: Video Playlists sub-menu item to Videos menu.
 - Added: TV Show logo to Landscape view
 - Added: Not Rated flag in VideoInfo / Party mode submenu-item to Music menu- thx Danofun.
