--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -217,5 +217,6 @@
   <string id="31175">Add Playlist Button to Movies Submenu</string>
   <string id="31176">Enable Playlist Button</string>
   <string id="31177">Add Playlist Button to Music Submenu</string>
+  <string id="31178">Add Playlist Button to TV Shows Submenu</string>
 
 </strings>
