--- a/changelog.txt
+++ b/changelog.txt
@@ -7,10 +7,10 @@
 - Added: It is now possible to add 3 music playlists to submenu of Music.
 - Added: Video Playlists sub-menu item to Videos menu.
 - Added: TV Show logo to Landscape view
-- Added: Not Rated flag in VideoInfo / Party mode submenu-item to Music menu- thx Danofun.
+- Added: Not Rated flag in VideoInfo / Party mode sub-menu item to Music menu- thx Danofun.
 - Fixed: Infopanel visibility when exiting episode or seasons view.
 - Repositioned Mediamenu.
-- Minor fixes and optimizations.
+- Several fixes and optimizations.
 
 [B]0.4[/B]
 - Added: When Infopanel is disabled in showcase views, trigger is now automatically active. 
