--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -218,5 +218,5 @@
   <string id="31176">Enable Playlist Button</string>
   <string id="31177">Add Playlist Button to Music Submenu</string>
   <string id="31178">Add Playlist Button to TV Shows Submenu</string>
-
+  <string id="31179">Enable Kiosk Mode (Disables Media Menu)</string>
 </strings>
