Added alternative kiosk mode

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -219,4 +219,5 @@
   <string id="31177">Add Playlist Button to Music Submenu</string>
   <string id="31178">Add Playlist Button to TV Shows Submenu</string>
   <string id="31179">Enable Kiosk Mode (Disables Media Menu)</string>
+  <string id="31180">Enable Alternative Kiosk Mode (Hides Options in Media Menu)</string>
 </strings>
