files for custom playlist

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -214,11 +214,11 @@
   <string id="31172">Extra Info</string>
   <string id="31173">Get Logo</string>
   <string id="31174">Enable TvTunes</string>
-  <string id="31175">Add Playlist Button to Movies Submenu</string>
+  <string id="31175">Add Video Playlist Button to Movies Submenu</string>
   <string id="31176">Enable Playlist Button</string>
-  <string id="31177">Add Playlist Button to Music Submenu</string>
-  <string id="31178">Add Playlist Button to TV Shows Submenu</string>
+  <string id="31177">Add Music Playlist Button to Music Submenu</string>
+  <string id="31178">Add Video Playlist Button to TV Shows Submenu</string>
   <string id="31179">Enable Kiosk Mode (Disables Media Menu)</string>
   <string id="31180">Enable Alternative Kiosk Mode (Hides Options in Media Menu)</string>
-  <string id="31181">Enable Extrathumbs Support in Showcase Views</string>
+  <string id="31181">Add Video Playlist to Home Menu</string>
 </strings>
