--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -221,4 +221,5 @@
   <string id="31179">Enable Kiosk Mode (Disables Media Menu)</string>
   <string id="31180">Enable Alternative Kiosk Mode (Hides Options in Media Menu)</string>
   <string id="31181">Add Video Playlist to Home Menu</string>
-</strings>
+  <string id="31182">Enable Extrathumbs Support in Showcase Views</string>
+  </strings>
