--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -222,4 +222,5 @@
   <string id="31180">Enable Alternative Kiosk Mode (Hides Options in Media Menu)</string>
   <string id="31181">Add Video Playlist to Home Menu</string>
   <string id="31182">Enable Extrathumbs Support in Showcase Views</string>
-  </strings>
+  <string id="31183">Enable Shutdown Warning in Home Menu</string>
+</strings>
