Added option to show source flags instead of code. reworked skin settings

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -223,4 +223,6 @@
   <string id="31181">Add Video Playlist to Home Menu</string>
   <string id="31182">Enable Extrathumbs Support in Showcase Views</string>
   <string id="31183">Enable Shutdown Warning in Home Menu</string>
+  <string id="31184">Show Source Flag Instead of Codec Flag</string>
+  <string id="31185">Viewtype</string>
 </strings>
