Added time-out options for infopanel (set in viewtype options)

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -205,7 +205,7 @@
   <string id="31164">Sort</string>
   <string id="31165">Slim List</string>
   <string id="31166">Infopanel</string>
-  <string id="31167">Auto Hide</string>
+  <string id="31167">- Auto Hide</string>
   <string id="31168">No CoverFlow</string>
   <string id="31169">Thin Panel</string>
   <string id="31170">Lower List</string>
@@ -225,4 +225,6 @@
   <string id="31183">Enable Shutdown Warning in Home Menu</string>
   <string id="31184">Show Source Flag Instead of Codec Flag</string>
   <string id="31185">Viewtype</string>
+  <string id="31186">Set Time-out for Auto Hide Infopanel</string>
+  <string id="31187">Time-out for Auto Hide Infopanel (seconds)</string>
 </strings>
