updated version number.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,16 @@
+[B]0.6[/B]
+- Added: It is now possible to add 3 video playlists to the Home menu.
+- Added: Kiosk and Alternative Kiosk Mode - thx ubuntuf4n
+- Added: Extrathumbs support in Showcase views.
+- Added: Not Rated flag throughtout skin - thx Danofun
+- Added: Source flags instead of codec flags option (fallback to codec).
+- Added: Time-out for Auto Hide Infopanel is now adjustable (set in Viewtype options).
+- Rearranged Skin Settings.
+- Shutdown warning is now optional.
+- Switched to transparent icons.
+- Fixed: Scrollbar navigation in Wall view.
+- Several fixes.
+
 [B]0.5[/B]
 - Added: TV Show logo download button in Info screen for tvshows.
 - Added: TvTunes support.
