--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 [B]0.6[/B]
 - Added: It is now possible to add 3 video playlists to the Home menu.
-- Added: Kiosk and Alternative Kiosk Mode - thx ubuntuf4n
+- Added: Kiosk and Alternative Kiosk Mode - thx Ubuntuf4n
 - Added: Extrathumbs support in Showcase views.
 - Added: Not Rated flag throughtout skin - thx Danofun
 - Added: Source flags instead of codec flags option (fallback to codec).
@@ -8,6 +8,7 @@
 - Rearranged Skin Settings.
 - Shutdown warning is now optional.
 - Switched to transparent icons.
+- Switched to Aeon's scrollbar in List view.
 - Fixed: Scrollbar navigation in Wall view.
 - Several fixes.
 
