--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -227,4 +227,5 @@
   <string id="31185">Viewtype</string>
   <string id="31186">Set Time-out for Auto Hide Infopanel</string>
   <string id="31187">Time-out for Auto Hide Infopanel (seconds)</string>
+  <string id="31188">Show Status</string>
 </strings>
