--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -228,4 +228,6 @@
   <string id="31186">Set Time-out for Auto Hide Infopanel</string>
   <string id="31187">Time-out for Auto Hide Infopanel (seconds)</string>
   <string id="31188">Show Status</string>
+  <string id="31189">Previous Episode</string>
+  <string id="31190">Next Episode</string>
 </strings>
