--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -230,4 +230,5 @@
   <string id="31188">Show Status</string>
   <string id="31189">Previous Episode</string>
   <string id="31190">Next Episode</string>
+  <string id="31191">Darker Fanart</string>
 </strings>
