--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,11 @@
+[B]0.6.1[/B]
+- Fixed Bannerview navigation to mediamenu.
+- Added: Tv Next Aired in Showcase and Landscape view (tvshows).
+- Fullscreen Info screen has cleaner look (movies).
+- lowered posters in LowList view.
+- Added option to darken fanart in showcase/landscape view (infopanel must be enabled)
+- Numerous fixes.
+
 [B]0.6[/B]
 - Added: It is now possible to add 3 video playlists to the Home menu.
 - Added: Kiosk and Alternative Kiosk Mode - thx Ubuntuf4n
