--- a/changelog.txt
+++ b/changelog.txt
@@ -3,7 +3,8 @@
 - Added: Tv Next Aired in Showcase and Landscape view (tvshows).
 - Fullscreen Info screen has cleaner look (movies).
 - lowered posters in LowList view.
-- Added option to darken fanart in showcase/landscape view (infopanel must be enabled)
+- Added option to darken fanart in showcase/landscape view (infopanel must be enabled).
+- Added web-dl icon to sourceflags.
 - Numerous fixes.
 
 [B]0.6[/B]
