Added option to show TV Show logo instead of Thumb in Landscape view. Landscape infopanel can now also be hidden.

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -209,7 +209,7 @@
   <string id="31168">No CoverFlow</string>
   <string id="31169">Thin Panel</string>
   <string id="31170">Lower List</string>
-  <string id="31171">TV Logo's</string>
+  <string id="31171">TV Logo Script</string>
   <string id="31318">Small</string>
   <string id="31172">Extra Info</string>
   <string id="31173">Get Logo</string>
@@ -231,4 +231,6 @@
   <string id="31189">Previous Episode</string>
   <string id="31190">Next Episode</string>
   <string id="31191">Darker Fanart</string>
+  <string id="31192">TV Show Thumb</string>
+  <string id="31193">TV Show Logo</string>
 </strings>
