Added option to add Favourites to main menu.

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -233,4 +233,8 @@
   <string id="31191">Darker Fanart</string>
   <string id="31192">TV Show Thumb</string>
   <string id="31193">TV Show Logo</string>
+  <string id="31194">-</string>
+  <string id="31195">Add Favourite to Home Menu</string>
+  <string id="31196">Favourite Path</string>
+  <string id="31197">Enable Favourite Button</string>
 </strings>
