Added extrathumbs option to media menu

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -237,4 +237,5 @@
   <string id="31195">Add Favourite to Home Menu</string>
   <string id="31196">Favourite Path</string>
   <string id="31197">Enable Favourite Button</string>
+  <string id="31198">Extrathumbs</string>
 </strings>
