--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -233,9 +233,26 @@
   <string id="31191">Darker Fanart</string>
   <string id="31192">TV Show Thumb</string>
   <string id="31193">TV Show Logo</string>
-  <string id="31194">-</string>
+  <string id="31194">Set Focus Offset of Main Menu (range from -2 to 14)</string>
   <string id="31195">Add Favourite to Home Menu</string>
   <string id="31196">Favourite Path</string>
   <string id="31197">Enable Favourite Button</string>
   <string id="31198">Extrathumbs</string>
+  <string id="31199">Enable Custom Focus Offset of Main Menu on Startup</string>
+  <string id="31217">Latest Song</string>
+  <string id="31218">Latest Songs</string>
+  <string id="31219">Featured Episode</string>
+  <string id="31220">Featured Episodes</string>
+  <string id="31221">Featured Movie</string>
+  <string id="31222">Featured Movies</string>
+  <string id="31212">- Show Latest Movies</string>
+  <string id="31213">- Show Random Movies</string>
+  <string id="31214">- Show Latest Episodes</string>
+  <string id="31215">- Show Random Episodes</string>
+  <string id="31216">- Show Latest Music</string>
+  <string id="31211">- Show Random Music</string>
+  <string id="31223">Enable Latest Movie Posters</string>
+  <string id="31224">Enable Random Movie Posters</string>
+  <string id="31225">Audio/Sub</string>
+  <string id="31226">Hide Flags</string>
 </strings>
