--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,16 @@
+[B]0.7[/B]
+- Added: UK and Germany ratings throughout skin.
+- Added: Custom Favourites to Main Menu.
+- Added: Custom Focus Offset Main Menu.
+- Added: Random/Latest Movie Poster Widget.
+- Added: Choice to show random or latest added widget for music, movies and episodes.
+- Added: Flags in InfoList are now optional.
+- Added: TV Logo as listitem in Landscape view.
+- Added: Infopanel can now be hidden in Landscape view.
+- Fixed: Animations of scan dialogs.
+- Fixed: Media Menu navigation now finally works as it should.
+- Fixed: Backgrouns of videoplaylists are now seperate.
+
 [B]0.6.1[/B]
 - Fixed Bannerview navigation to mediamenu.
 - Added: Tv Next Aired in Showcase and Landscape view (tvshows).
