Added vinyl cd art option

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -255,4 +255,5 @@
   <string id="31224">Enable Random Movie Posters</string>
   <string id="31225">Audio/Sub</string>
   <string id="31226">Hide Flags</string>
+  <string id="31227">Use Vinyl Record as Default in CDArt</string>
 </strings>
