corrected recent added / random music thumbs and labels

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -239,8 +239,8 @@
   <string id="31197">Enable Favourite Button</string>
   <string id="31198">Extrathumbs</string>
   <string id="31199">Enable Custom Focus Offset of Main Menu on Startup</string>
-  <string id="31217">Latest Song</string>
-  <string id="31218">Latest Songs</string>
+  <string id="31217">Latest Album</string>
+  <string id="31218">Latest Albums</string>
   <string id="31219">Featured Episode</string>
   <string id="31220">Featured Episodes</string>
   <string id="31221">Featured Movie</string>
