pff too much to type ;-)

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,11 @@
+[B]0.8[/B]
+- Added: BannerWall view.
+- Added: Panel view.
+- Added: Viewtypes of Video Library can now be disabled (Goes for whole library, not seperate movies/tvshows!).
+- Reworked Poster Widget.
+- Scan dialogs are now smaller on Homescreen.
+- Fixed: Showcase view now shows icons correctly.
+
 [B]0.7[/B]
 - Added: UK and Germany ratings throughout skin.
 - Added: Custom Favourites to Main Menu.
