--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -256,4 +256,12 @@
   <string id="31225">Audio/Sub</string>
   <string id="31226">Hide Flags</string>
   <string id="31227">Use Vinyl Record as Default in CDArt</string>
+  <string id="31228">Vertical</string>
+  <string id="31229">Horizontal</string>
+  <string id="31230">Viewtypes</string>
+  <string id="31231">BannerWall</string>
+  <string id="31233">Panel</string>
+  <string id="31234">Wall</string>
+  <string id="31235">Info List</string>
+  <string id="31236">Banners</string>
 </strings>
