--- a/changelog.txt
+++ b/changelog.txt
@@ -2,9 +2,14 @@
 - Added: BannerWall view.
 - Added: Panel view.
 - Added: Viewtypes of Video Library can now be disabled (Goes for whole library, not seperate movies/tvshows!).
+- Added: TV Logo script now adds banner.jpg and landscape.jpg (folder.jpg can be removed, re-run the logo script!)
+- Added: Banner.jpg and Poster.jpg support (automatic if you enable/disable "Posters instead of Banners" option).
 - Reworked Poster Widget.
 - Scan dialogs are now smaller on Homescreen.
 - Fixed: Showcase view now shows icons correctly.
+- Fixed(?): Showcase view no longer shows duplicate items - Thx Hitcher.
+- Fixed: Addons now show square showcase and square wall view when entered through videolibrary/files.
+- Fixed: Focus animation in Landscape view when there are < 3 items in folder.
 
 [B]0.7[/B]
 - Added: UK and Germany ratings throughout skin.
