--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -245,14 +245,14 @@
   <string id="31220">Featured Episodes</string>
   <string id="31221">Featured Movie</string>
   <string id="31222">Featured Movies</string>
-  <string id="31212">- Show Latest Movies</string>
-  <string id="31213">- Show Random Movies</string>
-  <string id="31214">- Show Latest Episodes</string>
-  <string id="31215">- Show Random Episodes</string>
-  <string id="31216">- Show Latest Music</string>
-  <string id="31211">- Show Random Music</string>
-  <string id="31223">Enable Latest Movie Posters</string>
-  <string id="31224">Enable Random Movie Posters</string>
+  <string id="31212">- Show Latest Movies Widget</string>
+  <string id="31213">- Show Random Movies Widget</string>
+  <string id="31214">- Show Latest Episodes Widget</string>
+  <string id="31215">- Show Random Episodes Widget</string>
+  <string id="31216">- Show Latest Music Widget</string>
+  <string id="31211">- Show Random Music Widget</string>
+  <string id="31223">- Show Latest Movie Posters Widget</string>
+  <string id="31224">- Show Random Movie Posters Widget</string>
   <string id="31225">Audio/Sub</string>
   <string id="31226">Hide Flags</string>
   <string id="31227">Use Vinyl Record as Default in CDArt</string>
