Choose Trailer button or Trailer Label in Low List view.

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -264,4 +264,7 @@
   <string id="31234">Wall</string>
   <string id="31235">Info List</string>
   <string id="31236">Banners</string>
+  <string id="31237">Press RIGHT to see trailer</string>
+  <string id="31238">Trailer Button</string>
+  <string id="31239">Trailer Label</string>
 </strings>
