--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -267,4 +267,6 @@
   <string id="31237">Press RIGHT to see trailer</string>
   <string id="31238">Trailer Button</string>
   <string id="31239">Trailer Label</string>
+  <string id="31240">"New" Overlay</string>
+  <string id="31241">"Watched" Overlay</string>
 </strings>
