Added option to make submenu of movies enter library with cinema script enabled (General Settings)

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -269,4 +269,5 @@
   <string id="31239">Trailer Label</string>
   <string id="31240">"New" Overlay</string>
   <string id="31241">"Watched" Overlay</string>
+  <string id="31242">Submenu of Movies Uses Cinema Experience Script as Default</string>
 </strings>
