added optional cdart, added bannerplex, removed banners view,  added next aired support (aplpha), changed recent added albums to songs. added miniplayerinfo to slideshow.

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -239,8 +239,8 @@
   <string id="31197">Enable Favourite Button</string>
   <string id="31198">Extrathumbs</string>
   <string id="31199">Enable Custom Focus Offset of Main Menu on Startup</string>
-  <string id="31217">Latest Album</string>
-  <string id="31218">Latest Albums</string>
+  <string id="31217">Latest Song</string>
+  <string id="31218">Latest Songs</string>
   <string id="31219">Featured Episode</string>
   <string id="31220">Featured Episodes</string>
   <string id="31221">Featured Movie</string>
@@ -263,11 +263,13 @@
   <string id="31233">Panel</string>
   <string id="31234">Wall</string>
   <string id="31235">Info List</string>
-  <string id="31236">Banners</string>
+  <string id="31236">BannerPlex</string>
   <string id="31237">Press RIGHT to see trailer</string>
   <string id="31238">Trailer Button</string>
   <string id="31239">Trailer Label</string>
   <string id="31240">"New" Overlay</string>
   <string id="31241">"Watched" Overlay</string>
   <string id="31242">Submenu of Movies Uses Cinema Experience Script as Default</string>
+  <string id="31243">Schedule</string>
+  <string id="31244">Enable CDArt in Home Now Playing</string>
 </strings>
