--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,15 @@
+[B]0.9[/B]
+- Added: BannerPlex view
+- Removed: Banners view
+- Added: "New" overlay instead of watched (optional, available in Landscape, BannerPlex, BannerWall and Showcase views)
+- Changed: Recent added script now fetches songs instead of albums.
+- Fixed: Posters not showing up in movie view when poster instead of banners is disabled.
+- Fixed: Overlapping watched icon in lowlist season view.
+- Added: Choose Trailer button or Trailer Label in Low List view.
+- Removed: Randomitems alarm at startup.
+- Added: Option to make submenu of movies enter library with cinema script enabled (General Settings).
+- Added: CDArt in Home window is now optional.
+
 [B]0.8[/B]
 - Added: BannerWall view.
 - Added: Panel view.
