--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+[B]0.9.1[/B]
+- Added: Season Fanart
+- Improved time of opening videolibrary
+- Improved overall performance of videolibrary.
+
+
 [B]0.9[/B]
 - Added: BannerPlex view
 - Removed: Banners view
