Added BluRay/DVD cases to Low List movies; Added infopanel for music; changed scrolloffset label;restored fanart toggle to mediamenu; added plot/plotoutline option.

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -211,7 +211,7 @@
   <string id="31170">Lower List</string>
   <string id="31171">TV Logo Script</string>
   <string id="31318">Small</string>
-  <string id="31172">Extra Info</string>
+  <string id="31172">Show Extra Info</string>
   <string id="31173">Get Logo</string>
   <string id="31174">Enable TvTunes</string>
   <string id="31175">Add Video Playlist Button to Movies Submenu</string>
@@ -264,7 +264,7 @@
   <string id="31234">Wall</string>
   <string id="31235">Info List</string>
   <string id="31236">BannerPlex</string>
-  <string id="31237">Press RIGHT to see trailer</string>
+  <string id="31237">Press LEFT to see trailer</string>
   <string id="31238">Trailer Button</string>
   <string id="31239">Trailer Label</string>
   <string id="31240">"New" Overlay</string>
@@ -272,4 +272,8 @@
   <string id="31242">Submenu of Movies Uses Cinema Experience Script as Default</string>
   <string id="31243">Schedule</string>
   <string id="31244">Enable CDArt in Home Now Playing</string>
+  <string id="31245">Show Plot</string>
+  <string id="31246">Show Plot Outline</string>
+  <string id="31247">Show Genre</string>
+  <string id="31248">Show Cases</string>
 </strings>
