--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -275,5 +275,5 @@
   <string id="31245">Show Plot</string>
   <string id="31246">Show Plot Outline</string>
   <string id="31247">Show Genre</string>
-  <string id="31248">Show Cases</string>
+  <string id="31248">BD/DVD Cases</string>
 </strings>
