Infopanel can now be toggled to be semi-transparent. (option in media-menu)

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -277,4 +277,5 @@
   <string id="31247">Show Genre</string>
   <string id="31248">BD/DVD Cases</string>
   <string id="31249">Use Classic Aeon Home Menu</string>
+  <string id="31250">- Transparent</string>
 </strings>
