Added favorites to submenu of music,movies and tv. Added glass bar home menu option - thx kealan.

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -276,6 +276,10 @@
   <string id="31246">Show Plot Outline</string>
   <string id="31247">Show Genre</string>
   <string id="31248">BD/DVD Cases</string>
-  <string id="31249">Use Classic Aeon Home Menu</string>
+  <string id="31249">Use Classic Aeon Home Menu Bar</string>
   <string id="31250">- Transparent</string>
+  <string id="31251">Use Glass Style Home Menu Bar</string>
+  <string id="31252">Add Favorite to Movies Submenu</string>
+  <string id="31253">Add Favorite to Music Submenu</string>
+  <string id="31254">Add Favorite to TV Shows Submenu</string>
 </strings>
