added bluray disc - thx squidy

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -255,7 +255,7 @@
   <string id="31224">- Show Random Movie Posters Widget</string>
   <string id="31225">Audio/Sub</string>
   <string id="31226">Hide Flags</string>
-  <string id="31227">Use Vinyl Record as Default in CDArt</string>
+  <string id="31227">- Use Vinyl Record as Default in CDArt</string>
   <string id="31228">Vertical</string>
   <string id="31229">Horizontal</string>
   <string id="31230">Viewtypes</string>
@@ -282,4 +282,5 @@
   <string id="31252">Add Favorite to Movies Submenu</string>
   <string id="31253">Add Favorite to Music Submenu</string>
   <string id="31254">Add Favorite to TV Shows Submenu</string>
+  <string id="31255">- Use Blu-ray Disc as Default in CDArt</string>
 </strings>
