--- a/changelog.txt
+++ b/changelog.txt
@@ -1,13 +1,23 @@
+[B]0.9.2[/B]
+- Added: Infopanel in showcase views for music.
+- Added: Blu-ray/DVD Cases (check option in DVD Cases view, or Low List view).
+- Added: Favorites to Submenu of Music, TV and Movies.
+- Added: Infopanel transparency toggle.
+- Added: Option for classic home menu bar or glass menu bar - thx kealan.
+- Changed: Trailer label in Low List is now the second label of the focused item.
+- Changed: Audioflags; If there are missing flags, copy the missing logo to flags/audio and name it like how it's called in the XBMC database).
+- Several fixes.
+
 [B]0.9.1[/B]
-- Added: Season Fanart
-- Improved time of opening videolibrary
+- Added: Season Fanart.
+- Improved time of opening videolibrary.
 - Improved overall performance of videolibrary.
 
 
 [B]0.9[/B]
-- Added: BannerPlex view
-- Removed: Banners view
-- Added: "New" overlay instead of watched (optional, available in Landscape, BannerPlex, BannerWall and Showcase views)
+- Added: BannerPlex view.
+- Removed: Banners view.
+- Added: "New" overlay instead of watched (optional, available in Landscape, BannerPlex, BannerWall and Showcase views).
 - Changed: Recent added script now fetches songs instead of albums.
 - Fixed: Posters not showing up in movie view when poster instead of banners is disabled.
 - Fixed: Overlapping watched icon in lowlist season view.
