--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+[B]0.9.3[/B]
+- Fixed missing audiocodecs in fullscreen info
+
 [B]0.9.2[/B]
 - Added: Infopanel in showcase views for music.
 - Added: Blu-ray/DVD Cases (check option in DVD Cases view, or Low List view).
