Added optional fixed/wrap list in showcase views. Enable in Viewtype options in skin settings.

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -283,4 +283,5 @@
   <string id="31253">Add Favorite to Music Submenu</string>
   <string id="31254">Add Favorite to TV Shows Submenu</string>
   <string id="31255">- Use Blu-ray Disc as Default in CDArt</string>
+  <string id="31256">Use Wrap List in Showcase views</string>
 </strings>
