--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+[B]0.9.5[/B]
+- Added: Panel view for movies.
+- Added: Aeon65 font for classic home menu -  all credits to phil65 for finding this font.
+- Reworked panel view and settings screens.
+- Bug fixes
+
 [B]0.9.4[/B]
 - Fixed missing Info List
 
