--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 [B]0.9.5[/B]
 - Added: Panel view for movies.
 - Added: Aeon65 font for classic home menu -  all credits to phil65 for finding this font.
+- Added: Optional Wrap/Fixed list for showcase views (set in viewtype options).
 - Reworked panel view and settings screens.
 - Bug fixes
 
