--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 - Added: Panel view for movies.
 - Added: Aeon65 font for classic home menu -  all credits to phil65 for finding this font.
 - Added: Optional Wrap/Fixed list for showcase views (set in viewtype options).
+- Added: Fallback fanart in Showcase views.
 - Reworked panel view and settings screens.
 - Bug fixes
 
