RSS feed, Timepanel and Library stats are now detachable from main menu (enable in Home Window options)

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -287,4 +287,7 @@
   <string id="31257">Details</string>
   <string id="31258">Overview</string>
   <string id="31259">Press RIGHT to see trailer</string>
+  <string id="31260">Detach Timepanel from Main Menu</string>
+  <string id="31261">Detach Library Stats from Main Menu</string>
+  <string id="31262">Detach RSS Feed from Main Menu</string>
 </strings>
