Added Landscape view to affected views in the wrap/fixed toggle.

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -283,7 +283,7 @@
   <string id="31253">Add Favorite to Music Submenu</string>
   <string id="31254">Add Favorite to TV Shows Submenu</string>
   <string id="31255">- Use Blu-ray Disc as Default in CDArt</string>
-  <string id="31256">Use Wrap List in Showcase views</string>
+  <string id="31256">Use Wrap List in Landscape and Showcase views</string>
   <string id="31257">Details</string>
   <string id="31258">Overview</string>
   <string id="31259">Press RIGHT to see trailer</string>
