added animated backgrounds option.

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -290,4 +290,5 @@
   <string id="31260">Detach Timepanel from Main Menu</string>
   <string id="31261">Detach Library Stats from Main Menu</string>
   <string id="31262">Detach RSS Feed from Main Menu</string>
+  <string id="31263">Enable Animated Backgrounds</string>
 </strings>
