--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -292,4 +292,5 @@
   <string id="31262">Detach RSS Feed from Main Menu</string>
   <string id="31263">Enable Animated Backgrounds</string>
   <string id="31264">Enable Background Effect on Panels</string>
+  <string id="31265">Smaller Pop-up Dialogs</string>
 </strings>
