reworked home now playing video widget

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -293,4 +293,5 @@
   <string id="31263">Enable Animated Backgrounds</string>
   <string id="31264">Enable Background Effect on Panels</string>
   <string id="31265">Smaller Pop-up Dialogs</string>
+  <string id="31266">FORWARD</string>
 </strings>
