--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -184,7 +184,7 @@
   <string id="31125">Show Background "Now Playing" Visualization</string>
   <string id="31142">Show Album level fanart in Visualization</string>
   <string id="31107">Hide Flagging in List View</string>
-  <string id="31104">Show CDart in Music Visualization</string>
+  <string id="31104">Use Original Aeon Music Visualization</string>
   <string id="31105">Lock main menu</string>
   <string id="31028">Showcase</string>
   <string id="31029">Showcase</string>
@@ -294,4 +294,5 @@
   <string id="31264">Enable Background Effect on Panels</string>
   <string id="31265">Smaller Pop-up Dialogs</string>
   <string id="31266">FORWARD</string>
+  <string id="31267">Enable CDArt in Music Visualization</string>
 </strings>
