--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -296,4 +296,5 @@
   <string id="31266">FORWARD</string>
   <string id="31267">Enable CDArt in Music Visualization</string>
   <string id="31268">Enable Breadcrumbs</string>
+  <string id="31269">Enable Background Effect</string>
 </strings>
