Added Neon65 theme.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,18 @@
+[B]0.9.6[/B]
+- Added: Music Visualization from Aeon65 - credits to creators of Aeon65.
+- Added: Bacground effect on Panels - credits to creators of Aeon65.
+- Added: Animated Backgrounds option.
+- Changed: Home Now Playing Widget recreated to how it was in Aeon Auriga.
+- Changed: Extra Info/Genre and No Flow option are now seperate for movies and tvshows.
+- Added: Default TV series case and Movies sets case - thx kealan.
+- Added: Breadcrumbs (enable in general settings, diable timepanel to enable option).
+- Added: Theme "Neon65" - credits to creators of Aeon65.
+- Added: Support for poster.jpg and seasonthumbs in DialogVideoInfo.xml.
+- Added: Landscape view to affected views in the wrap/fixed toggle.
+- Added: RSS feed, Timepanel and Library stats are now detachable from main menu (enable in Home Window options)
+- Fixed: Skinned ProfileSettings.xml, LockSettings.xml and LoginScreen.xml.
+- Bug fixes.
+
 [B]0.9.5[/B]
 - Added: Panel view for movies.
 - Added: Aeon65 font for classic home menu -  all credits to phil65 for finding this font.
